-- Generated SQL
CREATE TYPE "membership_role" AS ENUM (
  'owner',
  'member'
);

CREATE TYPE "event_status" AS ENUM (
  'confirmed',
  'tentative',
  'cancelled'
);

CREATE TYPE "attendance_status" AS ENUM (
  'accepted',
  'declined',
  'tentative',
  'needs-action'
);

CREATE TYPE "invitation_status" AS ENUM (
  'accepted',
  'declined',
  'needs-action'
);

CREATE TYPE "sync_status" AS ENUM (
  'inactive',
  'active',
  'failed'
);

CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "username" varchar(50) NOT NULL,
  "email" varchar(255) NOT NULL,
  "password" varchar(255) NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "calendars" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "name" varchar(255) NOT NULL,
  "description" varchar(1000) NOT NULL,
  "owner_user_id" integer,
  "is_group" boolean NOT NULL DEFAULT false,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "color" varchar(7) NOT NULL,
  "external_source_name" varchar(255),
  "external_source_url" varchar(1000),
  "external_last_sync" timestamp,
  "external_sync_status" sync_status NOT NULL DEFAULT 'inactive'
);

CREATE TABLE "memberships" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "calendar_id" int NOT NULL,
  "user_id" int NOT NULL,
  "role" membership_role NOT NULL,
  "color" varchar(7) NOT NULL
);

CREATE TABLE "events" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "calendar_id" INTEGER NOT NULL,
  "ics_uid" varchar UNIQUE NOT NULL,
  "title" varchar(255) NOT NULL,
  "description" varchar(1000) NOT NULL,
  "location" varchar(255) NOT NULL,
  "start_time" timestamp NOT NULL,
  "end_time" timestamp NOT NULL,
  "timezone" varchar(2000) NOT NULL DEFAULT 'UTC',
  "all_day" boolean NOT NULL DEFAULT false,
  "recurrence_rule" text,
  "status" event_status NOT NULL DEFAULT 'confirmed',
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "proposed_by_user_id" int NOT NULL,
  "user_read_only" boolean NOT NULL DEFAULT false
);

CREATE TABLE "event_attendance" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "event_id" int NOT NULL,
  "membership_id" int NOT NULL,
  "status" attendance_status NOT NULL DEFAULT 'needs-action'
);

CREATE TABLE "invitations" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "calendar_id" int NOT NULL,
  "user_id" int NOT NULL,
  "status" invitation_status NOT NULL DEFAULT 'needs-action',
  "created_at" timestamp NOT NULL DEFAULT (now())
);

ALTER TABLE "calendars" ADD FOREIGN KEY ("owner_user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "memberships" ADD FOREIGN KEY ("calendar_id") REFERENCES "calendars" ("id") ON DELETE CASCADE;

ALTER TABLE "memberships" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "events" ADD FOREIGN KEY ("proposed_by_user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "events" ADD FOREIGN KEY ("calendar_id") REFERENCES "calendars" ("id") ON DELETE CASCADE;

ALTER TABLE "event_attendance" ADD FOREIGN KEY ("event_id") REFERENCES "events" ("id") ON DELETE CASCADE;

ALTER TABLE "event_attendance" ADD FOREIGN KEY ("membership_id") REFERENCES "memberships" ("id") ON DELETE CASCADE;

ALTER TABLE "invitations" ADD FOREIGN KEY ("calendar_id") REFERENCES "calendars" ("id") ON DELETE CASCADE;

ALTER TABLE "invitations" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

-- Manual SQL
ALTER TABLE calendars
ADD CONSTRAINT color_hex_constraint
CHECK (color ~ '^#[A-Fa-f0-9]{6}$');

ALTER TABLE memberships
ADD CONSTRAINT color_hex_constraint
CHECK (color ~ '^#[A-Fa-f0-9]{6}$');

-- Trigger functions

-- When a new group event is created → create attendance rows for all group members

ALTER TABLE event_attendance
ADD CONSTRAINT event_attendance_event_membership_unique
UNIQUE (event_id, membership_id);

CREATE OR REPLACE FUNCTION trigger_add_attendance_on_new_group_event()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
BEGIN
  IF (SELECT is_group FROM calendars WHERE id = NEW.calendar_id) THEN
    INSERT INTO event_attendance (event_id, membership_id, status)
    SELECT NEW.id, m.id, 'needs-action'::attendance_status
    FROM   memberships m
    WHERE  m.calendar_id = NEW.calendar_id
    ON CONFLICT ON CONSTRAINT event_attendance_event_membership_unique DO NOTHING;
  END IF;
  RETURN NEW;
END;
$$;

CREATE TRIGGER add_attendance_on_new_group_event
AFTER INSERT ON events
FOR EACH ROW
EXECUTE FUNCTION trigger_add_attendance_on_new_group_event();

-- When a new member is added to a group calendar → create attendance rows for future events

CREATE OR REPLACE FUNCTION trigger_add_attendance_on_new_membership()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
BEGIN
  IF (SELECT is_group FROM calendars WHERE id = NEW.calendar_id) THEN
    INSERT INTO event_attendance (event_id, membership_id, status)
    SELECT e.id, NEW.id, 'needs-action'::attendance_status
    FROM   events e
    WHERE  e.calendar_id = NEW.calendar_id
      AND  e.start_time >= NOW()
    ON CONFLICT ON CONSTRAINT event_attendance_event_membership_unique DO NOTHING;
  END IF;
  RETURN NEW;
END;
$$;

CREATE TRIGGER add_attendance_on_new_membership
AFTER INSERT ON memberships
FOR EACH ROW
EXECUTE FUNCTION trigger_add_attendance_on_new_membership();